namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recipe-app
  labels:
    app.kubernetes.io/name: recipe-app
    app.kubernetes.io/part-of: recipe-collection-system
