ingredients-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingredients-service
  namespace: recipe-app
  labels:
    app: ingredients-service
    app.kubernetes.io/name: ingredients-service
    app.kubernetes.io/part-of: recipe-collection-system
spec:
  type: LoadBalancer
  selector:
    app: ingredients-service
  ports:
    - name: http
      port: 5002
      targetPort: 5002
